# AI_CUP_2024_FinRAG

./: README.md
AI_CUP_2024_FinRAG/: README.md  cfg_example.ini  pyproject.toml
AI_CUP_2024_FinRAG/scripts/ingest/: ingest_reference.py  pdf_tools.py
AI_CUP_2024_FinRAG/src/esun_finrag/: retriever.py
AI_CUP_2024_FinRAG/src/esun_finrag/datastore/: weaviate_client.py
docker/: docker-compose.yml
scripts/: run_predict.py
src/esun_finrag/: __init__.py  api.py  settings.py
